# glide

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  SECURITY.md  auto_release_setup_instructions.md  mkdocs.yml  prek.toml  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/skills/create-pr/: SKILL.md
.claude/skills/dependabot/: SKILL.md
.claude/skills/newsletter/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/ticket/: SKILL.md
.claude/skills/watch/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  refactoring.md  repository.md
.github/workflows/: ci.yml  code_quality.yml  pages.yml  release.yml
docs/: contributing.md  getting-started.md  hooks.py  user_guide.md
docs/api/: confidence_intervals.md  confidence_sequences.md  estimators.md  index.md  io.md  mean_inference_results.md  mean_monitoring_results.md  monitors.md  samplers.md  scientific_validation.md  simulated_datasets.md  simulators.md
docs/api/core/: datasets.md  mean_inference_results.md
docs/assets/: glide-decision-tree.pptx
docs/data/: r_judge_labelled_openai_gpt-5.4.csv
docs/deep_dive/: asi_validation.ipynb  cluster_ppi_validation.ipynb  clustered_ppi_validation.ipynb  clustered_ptd_validation.ipynb  icml_case_study.ipynb  icml_deep_dive.ipynb  index.md  ipwptd_validation.ipynb  multi_ppi_validation.ipynb  ppi_validation.ipynb  ptd_validation.ipynb  scientific_validation.md  spider_case_study.ipynb  stratified_ppi_validation.ipynb  stratified_ptd_validation.ipynb
docs/deep_dive/case_studies/: r_judge.ipynb  spider.ipynb
docs/examples/: PPI_demo_synthdata_binary.ipynb  README.md  plot_ipw_ptd.py  plot_ptd.py  plot_stratified_ptd.py  quickstart.ipynb  scientific_validation_PPI.ipynb  soft_quickstart.ipynb  why_use_glide.ipynb
docs/getting-started/: installation.md  quickstart.ipynb
docs/javascripts/: copy-button.js  mathjax.js
docs/landing/: index.html
docs/notebooks/: PPI_demo_synthdata_binary.ipynb  quickstart.ipynb  why_use_glide.ipynb
docs/overrides/: main.html
docs/performance-estimation/: guide.md
docs/performance-estimation/examples/: PPI_demo_synthdata_binary.md  example2.md  quickstart.ipynb  soft_quickstart.ipynb
docs/science/: asi_validation.ipynb
docs/spider/: README.md
docs/spider/scripts/: _utils.py  build_dataset.py  download_dataset.py  explore_dataset.py  generate_ground_truths.py  generate_human_labels.py  generate_llm_judge_labels.py  generate_predictions.py  requirements.txt
docs/spider_scripts/: build_dataset.py  download_dataset.py
docs/stylesheets/: extra.css
docs/tutorials/: asi.ipynb  asymptotic_ppi_monitor.ipynb  cluster_ppi.ipynb  clustered_ppi.ipynb  cost_optimal.ipynb  cost_optimal_random.ipynb  cost_optimal_random_v2.ipynb  empirical_ppi_monitor.ipynb  index.md  multi_ppi.ipynb  ppi.ipynb  ppi_monitor.ipynb  stratified_ppi.ipynb
docs/user_guide/: asi.md  estimators.md  evaluation_workflow.md  guide.md  index.md  monitors.md  samplers.md  which_estimator_to_use.md
glide/: __init__.py  scientific_validation.py
glide/confidence_intervals/: __init__.py  base.py  bootstrap.py  clt.py
glide/confidence_sequences/: __init__.py  asymptotic.py  base.py  empirical_bernstein.py
glide/core/: clt_confidence_interval.py  dataset.py  inference_result.py  simulated.py  simulated_datasets.py  utils.py  validation.py
glide/core/inference_result/: __init__.py  base.py  classical.py  semi_supervised.py
glide/core/mean_inference_result/: __init__.py  base.py  classical.py  prediction_powered.py  semi_supervised.py
glide/estimators/: RELEASE_CHECKLIST.md  __init__.py  asi.py  classical.py  cluster_classical.py  cluster_core.py  cluster_ppi.py  clustered_classical.py  clustered_core.py  clustered_ppi.py  clustered_ptd.py  core.py  estimator_protocol.py  ipw_classical.py  ipw_ptd.py  multi_ppi.py  multi_ppi_core.py  multi_ptd.py  multi_ptd_core.py  ppi.py  ppi_core.py  ptd.py  ptd_core.py  stratified_classical.py  stratified_core.py  stratified_ppi.py  stratified_ptd.py
glide/io/: __init__.py  export.py
glide/mean_inference_results/: __init__.py  base.py  classical.py  prediction_powered.py
glide/mean_monitoring_results/: __init__.py  base.py  classical.py  prediction_powered.py
glide/monitors/: __init__.py  asymptotic_classical.py  asymptotic_ppi.py  classical.py  classical_core.py  core.py  empirical_classical.py  empirical_ppi.py  ppi.py  ppi_core.py
glide/samplers/: __init__.py  active.py  cluster.py  clustered.py  core.py  cost_optimal.py  cost_optimal_random.py  stratified.py  uniform.py
glide/simulators/: __init__.py  annotation.py  binary.py  clustered_binary.py  gaussian.py  multi_binary.py  oracle_binary.py  stratified_binary.py
landing/: index.html
site/notebooks/: PPI_demo_synthdata_binary.ipynb
spider_case_study/notebooks/: spider_ppi_demo.ipynb
spider_case_study/scripts/: build_final_dataset.py  build_final_dataset_v2.py  generate_human_labels.py  generate_llm_judge_labels.py  generate_predictions.py
tests/functional/: test_active_sampler.py  test_dataset_functional.py  test_simulated_datasets.py
tests/functional/estimators/: test_asi.py  test_classical.py  test_cluster_classical.py  test_cluster_ppi.py  test_clustered_classical.py  test_clustered_ppi.py  test_clustered_ptd.py  test_ipw_classical.py  test_ipw_ptd.py  test_multi_ppi.py  test_multi_ptd.py  test_stratified_classical.py  test_stratified_ppi.py  test_stratified_ptd.py
tests/functional/monitors/: test_asymptotic_classical.py  test_asymptotic_ppi.py  test_classical.py  test_empirical_classical.py  test_empirical_ppi.py  test_ppi.py
tests/functional/samplers/: test_active.py  test_cluster.py  test_cost_optimal.py  test_cost_optimal_random.py  test_stratified.py
tests/functional/simulators/: test_binary.py  test_gaussian.py  (+4 more)
tests/starter_kit/: test_utils.py
tests/unit/: test___init__.py  test_scientific_validation.py  test_utils.py
(+94 files in other folders)
