[project]
name = "glide-py"
version = "0.6.0"
authors = [
  {name = "Grégoire Martinon", email = "gregoire.martinon@emerton-data.com"},
  {name = "Ibrahim Merad", email = "ibrahim.merad@kaukana-ventures.com"},
  {name = "Mohammed Raki", email = "mohammed.raki@emerton-data.com"},
  {name = "Guillaume D'Hérouville", email = "guillaume.dherouville@emerton-data.com"},
  {name = "Victor Woelffel", email = "victor.woelffel@emerton-data.com"},
]
maintainers = [
  {name = "Grégoire Martinon", email = "gregoire.martinon@emerton-data.com"},
  {name = "Ibrahim Merad", email = "ibrahim.merad@kaukana-ventures.com"},
]
description = "Helping humans ride the GenAI evaluation wave"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]
dependencies = [
    "scipy>=1.17.1",
]

[project.urls]
Homepage = "https://github.com/EmertonData/glide"
Issues = "https://github.com/EmertonData/glide/issues"
Repository = "https://github.com/EmertonData/glide"
Documentation = "https://glide-py.readthedocs.io/en/latest/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["glide"]

[dependency-groups]
dev = [
    "bump-my-version>=1.1.2",
    "papermill>=2.7.0",
    "prek>=0.3.4",
    "pytest>=9.0.2",
    "pytest-coverage>=0.0",
    "ruff>=0.15.16",
    "ty>=0.0.43",
]
doc = [
    "datasets>=4.8.5",
    "matplotlib>=3.10.9",
    "mkdocs>=1.6.1",
    "mkdocs-jupyter>=0.26.3",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "scikit-learn>=1.9.0"
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 120
fix = true
lint.extend-select = ["E", "I"]

[tool.ty.analysis]
respect-type-ignore-comments = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --doctest-modules"

[tool.bumpversion]
current_version = "0.6.0"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = "version: {current_version}"
replace = "version: {new_version}"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
